--- a/docs/sass/shadows.sass
+++ b/docs/sass/shadows.sass
@@ -5,6 +5,7 @@
   
 .shadow-boxes
   display: flex
+  flex-direction: column
   align-items: center
   justify-content: space-evenly
   flex-wrap: wrap
