--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -160,34 +160,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 96%; }
-
-.ph-line:nth-of-type(2) {
-  width: 73%; }
-
-.ph-line:nth-of-type(3) {
-  width: 79%; }
-
-.ph-line:nth-of-type(4) {
-  width: 82%; }
-
-.ph-line:nth-of-type(5) {
-  width: 72%; }
-
-.ph-line:nth-of-type(6) {
   width: 88%; }
 
-.ph-line:nth-of-type(7) {
-  width: 87%; }
-
-.ph-line:nth-of-type(8) {
+.ph-line:nth-of-type(2) {
   width: 71%; }
 
+.ph-line:nth-of-type(3) {
+  width: 76%; }
+
+.ph-line:nth-of-type(4) {
+  width: 98%; }
+
+.ph-line:nth-of-type(5) {
+  width: 85%; }
+
+.ph-line:nth-of-type(6) {
+  width: 95%; }
+
+.ph-line:nth-of-type(7) {
+  width: 78%; }
+
+.ph-line:nth-of-type(8) {
+  width: 78%; }
+
 .ph-line:nth-of-type(9) {
-  width: 92%; }
+  width: 91%; }
 
 .ph-line:nth-of-type(10) {
-  width: 87%; }
+  width: 99%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -223,11 +223,11 @@ body {
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     margin-left: 88px; }
   .ph-image-paragraph .ph-line:nth-of-type(1) {
-    width: calc(71% - 88px); }
-  .ph-image-paragraph .ph-line:nth-of-type(2) {
-    width: calc(88% - 88px); }
-  .ph-image-paragraph .ph-line:nth-of-type(3) {
     width: calc(72% - 88px); }
+  .ph-image-paragraph .ph-line:nth-of-type(2) {
+    width: calc(95% - 88px); }
+  .ph-image-paragraph .ph-line:nth-of-type(3) {
+    width: calc(88% - 88px); }
   .ph-image-paragraph .ph-lines {
     display: flex;
     flex-direction: column;
@@ -651,7 +651,8 @@ html {
 .code-box {
   height: 0;
   transition: 0.3s height;
-  margin: 12px; }
+  margin: 12px;
+  max-width: 90vw; }
 
 .code {
   background: #282828;
@@ -1113,3 +1114,33 @@ html {
   height: 40px; }
   .code-box:hover .code-shadow-right {
     transform: scaleY(1); }
+
+.note {
+  position: fixed;
+  bottom: 24px;
+  left: 24px;
+  height: 96px;
+  width: 384px;
+  background: #282828;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #E8E8E8;
+  max-width: 90vw;
+  padding: 12px;
+  text-align: center;
+  border-radius: 5px;
+  border: 2px solid #BCBCBC;
+  transform: translateX(-120%);
+  transition: transform 0.2s;
+  animation: 10s slideinout 5s; }
+
+@keyframes slideinout {
+  0% {
+    transform: translateX(-120%); }
+  5% {
+    transform: translateX(0); }
+  95% {
+    transform: translateX(0); }
+  100% {
+    transform: translateX(-120%); } }
