Fix code box sizing

--- a/components/placeholder.sass
+++ b/components/placeholder.sass
@@ -69,6 +69,7 @@ $ph-image-line-margin-left: $ph-paragraph-image-width + $ph-paragraph-image-marg
   width: 100%
   position: relative
   z-index: -1
+  height: 140px
 
   .ph-image
     height: $ph-paragraph-image-width
