--- a/docs/sass/code.sass
+++ b/docs/sass/code.sass
@@ -7,6 +7,22 @@
     height: 40px
     .code-#{$element}
       transform: scaleY(1)
+  .src-#{$element}:hover + .code-box--md
+    height: 80px
+  .code-box--md:hover
+    height: 80px
+  .src-#{$element}:hover + .code-box--lg
+    height: 120px
+  .code-box--lg:hover
+    height: 120px
+  .src-#{$element}:hover + .code-box--xl
+    height: 160px
+  .code-box--xl:hover
+    height: 160px
+  .src-#{$element}:hover + .code-box--xxl
+    height: 200px
+  .code-box--xxl:hover
+    height: 200px
   
 .code-box
   height: 0
