--- a/docs/sass/code.sass
+++ b/docs/sass/code.sass
@@ -41,6 +41,10 @@
   transform-origin: top
   transition: 0.3s transform
 
+.code-visible
+  transform: scaleY(1)
+  margin: $spacing-1
+
 +source-reveal(alert-light)
 +source-reveal(alert-dark)
 +source-reveal(alert-blue)
