--- a/docs/sass/hero.sass
+++ b/docs/sass/hero.sass
@@ -44,3 +44,19 @@
   border-radius: 5px
   margin-top: $spacing-5
   padding: $spacing-1 $spacing-7
+
+.hero__button:focus + .get-started
+  transform: scaleY(1)
+  height: 150px
+  opacity: 1
+
+.get-started
+  margin-top: $spacing-4
+  transform: scaleY(0)
+  height: 0
+  opacity: 0
+  transition: 0.3s transform, 0.3s height, 0.3s opacity
+
+.get-started__info
+  color: white
+  text-align: center
