--- a/docs/sass/hero.sass
+++ b/docs/sass/hero.sass
@@ -53,6 +53,7 @@
 .get-started
   margin-top: $spacing-4
   transform: scaleY(0)
+  transform-origin: top
   height: 0
   opacity: 0
   transition: 0.3s transform, 0.3s height, 0.3s opacity
