--- a/docs/sass/code.sass
+++ b/docs/sass/code.sass
@@ -40,6 +40,7 @@
   transform: scaleY(0)
   transform-origin: top
   transition: 0.3s transform
+  overflow-x: scroll
 
 .code-visible
   transform: scaleY(1)
