--- a/docs/sass/code.sass
+++ b/docs/sass/code.sass
@@ -53,6 +53,19 @@
 +source-reveal(alert-orange)
 +source-reveal(alert-red)
 
++source-reveal(btn-dark)
++source-reveal(btn-blue)
++source-reveal(btn-green)
++source-reveal(btn-orange)
++source-reveal(btn-red)
+
++source-reveal(btn-light-outline)
++source-reveal(btn-dark-outline)
++source-reveal(btn-blue-outline)
++source-reveal(btn-green-outline)
++source-reveal(btn-orange-outline)
++source-reveal(btn-red-outline)
+
 +source-reveal(btn-xs)
 +source-reveal(btn-sm)
 +source-reveal(btn-md)
